--- a/todo.txt
+++ b/todo.txt
@@ -24,12 +24,12 @@ do 6 kW / od 150 tisíc | DONE
 nad 6 kW - 15 kW  / od 250 | DONE
 nad 15 kW / Cenu neurčíme ale upřesníme | DONE
 
-mám zajem o vyrizeni dotace checkbox
+mám zajem o vyrizeni dotace checkbox | DONE
 obrazky ke strecham
 
 Cíl: Chci vyuzit pro ohrev boileru, pro zasobeni elektrinou, usetreni | DONE
 
-po vyplneni prijde mail na objednavky@adamssbros.cz
+po vyplneni prijde mail na objednavky@adamssbros.cz | DONE
 
 ----------------------
 
@@ -38,7 +38,9 @@ odhadovany tepelny vykon domu rd | DONE
 do 10 kW / 150 | DONE
 10- 20 / 250 | DONE
 nad 20 individualne | DONE
+ohřev vody 90 tisíc | DONE
 
-mám zajem o vyrizeni dotace checkbox
-po vyplneni prijde mail na objednavky@adamssbros.cz
+mám zajem o vyrizeni dotace checkbox | DONE
+po vyplneni prijde mail na objednavky@adamssbros.cz | DONE
 
+objednat tlacitko poslat dolu 
